src/test/ui/parser/issue-68092-unicode-ident-after-incomplete-expr.stderr
error: macro expansion ends with an incomplete expression: expected expression
  --> $DIR/issue-68092-unicode-ident-after-incomplete-expr.rs:3:14
   |
LL |         $($c)รถ*
   |              ^ expected expression

error: aborting due to previous error

